[tool.poetry]
name = "django-dbq"
version = "0.1.0"
description = "Django database-backed queued tasks"
authors = ["Matt Briancon <mattbriancon@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
django = "^3.0.6"
psycopg2-binary = "^2.8.5"
pytest = "^5.4.2"
django-stubs = "^1.5.0"
pytest-django = "^3.9.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
